--- a/jogo_mt_mt_legal/jogo_mt_mt_legal.vcxproj
+++ b/jogo_mt_mt_legal/jogo_mt_mt_legal.vcxproj
@@ -136,11 +136,13 @@
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="graphics.cpp" />
     <ClCompile Include="jogo_mt_mt_legal.cpp" />
+    <ClCompile Include="MyDrawable.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Entity.h" />
     <ClInclude Include="graphics.h" />
     <ClInclude Include="math\Coord.h" />
+    <ClInclude Include="MyDrawable.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
