--- a/jogo_mt_mt_legal/jogo_mt_mt_legal.vcxproj
+++ b/jogo_mt_mt_legal/jogo_mt_mt_legal.vcxproj
@@ -134,8 +134,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Alive.cpp" />
+    <ClCompile Include="CollisionManager.cpp" />
+    <ClCompile Include="EntityList.cpp" />
     <ClCompile Include="graphics.cpp" />
-    <ClCompile Include="inputManager.cpp" />
+    <ClCompile Include="InputManager.cpp" />
     <ClCompile Include="jogo_mt_mt_legal.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="MyDrawable.cpp" />
@@ -143,8 +145,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Alive.h" />
+    <ClInclude Include="CollisionManager.h" />
+    <ClInclude Include="EntityList.h" />
     <ClInclude Include="graphics.h" />
-    <ClInclude Include="inputManager.h" />
+    <ClInclude Include="InputManager.h" />
     <ClInclude Include="math\Coord.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="MyDrawable.h" />
