--- a/jogo_mt_mt_legal/jogo_mt_mt_legal.vcxproj
+++ b/jogo_mt_mt_legal/jogo_mt_mt_legal.vcxproj
@@ -141,6 +141,7 @@
     <ClCompile Include="InputManager.cpp" />
     <ClCompile Include="jogo_mt_mt_legal.cpp" />
     <ClCompile Include="Entity.cpp" />
+    <ClCompile Include="Level.cpp" />
     <ClCompile Include="MyDrawable.cpp" />
     <ClCompile Include="Player.cpp" />
   </ItemGroup>
@@ -151,6 +152,7 @@
     <ClInclude Include="EntityList.h" />
     <ClInclude Include="graphics.h" />
     <ClInclude Include="InputManager.h" />
+    <ClInclude Include="Level.h" />
     <ClInclude Include="math\Coord.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="MyDrawable.h" />
