--- a/jogo_mt_mt_legal/jogo_mt_mt_legal.vcxproj.filters
+++ b/jogo_mt_mt_legal/jogo_mt_mt_legal.vcxproj.filters
@@ -18,7 +18,7 @@
     <ClCompile Include="jogo_mt_mt_legal.cpp">
       <Filter>Arquivos de Origem</Filter>
     </ClCompile>
-    <ClCompile Include="graphics.cpp">
+    <ClCompile Include="GraphicManager.cpp">
       <Filter>Arquivos de Origem</Filter>
     </ClCompile>
     <ClCompile Include="Entity.cpp">
@@ -116,7 +116,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="graphics.h">
+    <ClInclude Include="GraphicManager.h">
       <Filter>Arquivos de Cabeçalho</Filter>
     </ClInclude>
     <ClInclude Include="Entity.h">
