--- a/jogo_mt_mt_legal/jogo_mt_mt_legal.vcxproj
+++ b/jogo_mt_mt_legal/jogo_mt_mt_legal.vcxproj
@@ -161,6 +161,7 @@
     <ClCompile Include="ObstacleHitbox.cpp" />
     <ClCompile Include="Platform.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="Projectile.cpp" />
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="SceneManager.cpp" />
     <ClCompile Include="Support.cpp" />
@@ -195,6 +196,7 @@
     <ClInclude Include="ObstacleHitbox.h" />
     <ClInclude Include="Platform.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="Projectile.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="SceneManager.h" />
     <ClInclude Include="Support.h" />
