--- a/jogo_mt_mt_legal/jogo_mt_mt_legal.vcxproj
+++ b/jogo_mt_mt_legal/jogo_mt_mt_legal.vcxproj
@@ -139,6 +139,7 @@
     <ClCompile Include="CommandStack1.cpp" />
     <ClCompile Include="Element.cpp" />
     <ClCompile Include="EnemyRanged.cpp" />
+    <ClCompile Include="Fire.cpp" />
     <ClCompile Include="Hittable.cpp" />
     <ClCompile Include="AttackHitbox.cpp" />
     <ClCompile Include="Being.cpp" />
@@ -169,6 +170,7 @@
     <ClCompile Include="Projectile.cpp" />
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="SceneManager.cpp" />
+    <ClCompile Include="Spike.cpp" />
     <ClCompile Include="Support.cpp" />
     <ClCompile Include="Terrain.cpp" />
     <ClCompile Include="Updatable.cpp" />
@@ -180,6 +182,7 @@
     <ClInclude Include="CommandStack1.h" />
     <ClInclude Include="Element.h" />
     <ClInclude Include="EnemyRanged.h" />
+    <ClInclude Include="Fire.h" />
     <ClInclude Include="Hittable.h" />
     <ClInclude Include="AttackHitbox.h" />
     <ClInclude Include="Being.h" />
@@ -209,6 +212,7 @@
     <ClInclude Include="Projectile.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="SceneManager.h" />
+    <ClInclude Include="Spike.h" />
     <ClInclude Include="Support.h" />
     <ClInclude Include="Terrain.h" />
     <ClInclude Include="Updatable.h" />
