--- a/jogo_mt_mt_legal/jogo_mt_mt_legal.vcxproj
+++ b/jogo_mt_mt_legal/jogo_mt_mt_legal.vcxproj
@@ -136,6 +136,7 @@
     <ClCompile Include="Command.cpp" />
     <ClCompile Include="CommandLevel1p2False.cpp" />
     <ClCompile Include="CommandLevel1p2True.cpp" />
+    <ClCompile Include="CommandQuit.cpp" />
     <ClCompile Include="CommandStack1.cpp" />
     <ClCompile Include="Element.cpp" />
     <ClCompile Include="EnemyRanged.cpp" />
@@ -179,6 +180,7 @@
     <ClInclude Include="Command.h" />
     <ClInclude Include="CommandLevel1p2False.h" />
     <ClInclude Include="CommandLevel1p2True.h" />
+    <ClInclude Include="CommandQuit.h" />
     <ClInclude Include="CommandStack1.h" />
     <ClInclude Include="Element.h" />
     <ClInclude Include="EnemyRanged.h" />
