--- a/jogo_mt_mt_legal/jogo_mt_mt_legal.vcxproj
+++ b/jogo_mt_mt_legal/jogo_mt_mt_legal.vcxproj
@@ -136,8 +136,12 @@
     <ClCompile Include="Command.cpp" />
     <ClCompile Include="CommandLevel1p2False.cpp" />
     <ClCompile Include="CommandLevel1p2True.cpp" />
+    <ClCompile Include="CommandLevel2p2False.cpp" />
+    <ClCompile Include="CommandLevel2p2True.cpp" />
     <ClCompile Include="CommandQuit.cpp" />
     <ClCompile Include="CommandStack1.cpp" />
+    <ClCompile Include="CommandStack2.cpp" />
+    <ClCompile Include="CommandStart.cpp" />
     <ClCompile Include="Element.cpp" />
     <ClCompile Include="EnemyRanged.cpp" />
     <ClCompile Include="Fire.cpp" />
@@ -180,8 +184,12 @@
     <ClInclude Include="Command.h" />
     <ClInclude Include="CommandLevel1p2False.h" />
     <ClInclude Include="CommandLevel1p2True.h" />
+    <ClInclude Include="CommandLevel2p2False.h" />
+    <ClInclude Include="CommandLevel2p2True.h" />
     <ClInclude Include="CommandQuit.h" />
     <ClInclude Include="CommandStack1.h" />
+    <ClInclude Include="CommandStack2.h" />
+    <ClInclude Include="CommandStart.h" />
     <ClInclude Include="Element.h" />
     <ClInclude Include="EnemyRanged.h" />
     <ClInclude Include="Fire.h" />
