--- a/jogo_mt_mt_legal/jogo_mt_mt_legal.vcxproj
+++ b/jogo_mt_mt_legal/jogo_mt_mt_legal.vcxproj
@@ -166,6 +166,7 @@
     <ClCompile Include="Level2.cpp" />
     <ClCompile Include="List.cpp" />
     <ClCompile Include="MainMenu.cpp" />
+    <ClCompile Include="Menu.cpp" />
     <ClCompile Include="MyDrawable.cpp" />
     <ClCompile Include="Obstacle.cpp" />
     <ClCompile Include="ObstacleHitbox.cpp" />
@@ -215,6 +216,7 @@
     <ClInclude Include="List.h" />
     <ClInclude Include="MainMenu.h" />
     <ClInclude Include="Entity.h" />
+    <ClInclude Include="Menu.h" />
     <ClInclude Include="MyDrawable.h" />
     <ClInclude Include="Obstacle.h" />
     <ClInclude Include="ObstacleHitbox.h" />
